force-app/main/default/objects/Webhook_Setting__c/Webhook_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>inwise Webhook Setting</label>
</CustomObject>