force-app/main/default/objects/Webhook_Setting__c/fields/Account_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>