force-app/main/default/objects/Webhook_Setting__c/fields/Contact_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Field__c</fullName>
    <label>Contact Field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>