force-app/main/default/objects/Webhook_Setting__c/fields/Lead_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>